--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react": "^16.4.2",
     "react-cosmos": "^4.6.4",
     "react-dom": "^16.4.2",
+    "react-html-parser": "^2.0.2",
     "react-lottie": "^1.2.3",
-    "react-scripts": "1.1.5"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
