--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-eslint": "9.x",
-    "eslint": "5.x",
+    "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.5",
     "eslint-plugin-flowtype": "2.x",
     "eslint-plugin-import": "2.x",
@@ -15,7 +15,8 @@
     "react-dom": "^16.4.2",
     "react-html-parser": "^2.0.2",
     "react-lottie": "^1.2.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-transition-group": "^2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
