--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^16.4.2",
     "react-html-parser": "^2.0.2",
     "react-lottie": "^1.2.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-transition-group": "^2.5.0"
   },
@@ -23,5 +25,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "react-cosmos-router-proxy": "^4.6.1"
   }
 }
