--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-sound": "^1.2.0",
     "react-transition-group": "^2.5.0"
   },
   "scripts": {
