--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
     "babel-eslint": "9.x",
     "classnames": "^2.2.6",
     "eslint": "5.6.0",
